src/styles/Home.css
.home {
  width: 100%;
  align-items: center;
  font-family: "Arial", sans-serif;
  color: #1a1365;
}

.about {
  width: 100%;
  height: calc(100vh - 100px);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #1a1365;
  color: #f0f0f0;
}

.about h2 {
  font-family: "Segoe UI", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 80px;
  color: #e9d35b;
  height: 50px;
}

.about .prompt {
  width: 40%;
  font-size: 30px;
}

.prompt a svg {
  font-size: 60px;
  margin: 5px;
  color: white;
}

.skills {
  font-size: 35px;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.skills h1 {
  color: #1a1365;
  margin: 10px 0;
}

.skill-type {
  width: 80%;
}

.skill-list {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}

.skill p {
  margin: 0;
}

.skill {
  margin: 5px 10px;
  padding: 10px;
  border-radius: 5px;
  border: 1px solid #1a1365;
  block-size: fit-content;
  cursor: pointer;
}

.skill:hover {
  background-color: lightgray;
}

@media only screen and (max-width: 830px) {
  .about h2 {
    font-size: 40px;
  }

  .about .prompt {
    margin-top: 10px;
    font-size: 20px;
    width: 80%;
  }

  .skills {
    text-align: center;
  }

  .list {
    padding: 0;
  }
  .skills h2 {
    font-size: 30px;
  }
}

